<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_liabilities_iso"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.isologismos.LiabilitiesIsoFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="201dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:text="@string/pathitiko"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editTextKefalaia"
        android:layout_width="297dp"
        android:layout_height="58dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/kefalaia"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="15"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextProvlepseis"
        android:layout_width="300dp"
        android:layout_height="61dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/provlepseis"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="15"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextKefalaia" />

    <EditText
        android:id="@+id/editTextM_Ypo"
        android:layout_width="294dp"
        android:layout_height="59dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/makroprothesmes_ypoxrewseis"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#546E7A"
        android:maxLength="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProvlepseis" />

    <EditText
        android:id="@+id/editTextB_Ypo"
        android:layout_width="294dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/braxyprothesmes_ypoxrewseis"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="15"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextM_Ypo" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/epomeno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextB_Ypo" />

    <Button
        android:id="@+id/buttonPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/proigoymeno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextB_Ypo" />

</androidx.constraintlayout.widget.ConstraintLayout>