<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.finacialdata.FinancialDataFragment">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/course_of_business"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextMonth"
        android:layout_width="292dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/month"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="292dp" />

    <EditText
        android:id="@+id/editTextRevenue"
        android:layout_width="291dp"
        android:layout_height="63dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/revenue"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMonth"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="291dp" />

    <EditText
        android:id="@+id/editTextExpenses"
        android:layout_width="283dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="15"
        android:hint="@string/expenses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRevenue"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="295dp" />

    <EditText
        android:id="@+id/editTextProfitLoss"
        android:layout_width="291dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/profit_loss"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextExpenses"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="295dp" />

    <EditText
        android:id="@+id/editTextRevenueGrowth"
        android:layout_width="298dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="15"
        android:hint="@string/revenue_growth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProfitLoss"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="295dp" />

    <EditText
        android:id="@+id/editTextNumberExpensesGrowth"
        android:layout_width="293dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="15"
        android:hint="@string/expenses_growth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRevenueGrowth"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="295dp" />

    <EditText
        android:id="@+id/editTextCustomerCount"
        android:layout_width="279dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="15"
        android:hint="@string/customers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberExpensesGrowth"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="295dp" />

    <EditText
        android:id="@+id/editTextSalesPerProduct"
        android:layout_width="269dp"
        android:layout_height="51dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/sales_per_product"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCustomerCount"
        app:layout_constraintVertical_bias="0.253" />

    <Button
        android:id="@+id/buttonSumbit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sumbit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSalesPerProduct" />

</androidx.constraintlayout.widget.ConstraintLayout>